--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img src="images/icon-team-builder.svg" alt="Team Builder" />
           </div>
         </div>
-        <div class="card orange three">
+        <div class="card orange four">
           <div class="card-text">
             <h1 class="heading">Karma</h1>
             <p class="para card-content">
@@ -71,7 +71,7 @@
             <img src="images/icon-karma.svg" alt="Team Builder" />
           </div>
         </div>
-        <div class="card blue four">
+        <div class="card blue three">
           <div class="card-text">
             <h1 class="heading">Calculator</h1>
             <p class="para card-content">
